welcome.lessons.welcome.array.search.SecondMaxValue.scala.error
max2Value:10: error: '(' expected but identifier found.
    if nums(compteur)!= nums(compteur+1){
       ^max2Value:15: error: illegal start of simple expression
  }
  ^